fix:collapse editor

--- a/src/server/sass/modules/_editor.scss
+++ b/src/server/sass/modules/_editor.scss
@@ -11,10 +11,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  z-index: 33;
-  /* Set the fixed height of the footer here */
-  /*height: 115px;*/
-  /*background-color: #f5f5f5;*/
+  z-index: 5;
 }
 
 /* = Form
