--- a/src/server/sass/modules/_iframe.scss
+++ b/src/server/sass/modules/_iframe.scss
@@ -2,6 +2,7 @@
   position: relative;
   text-align: center;
   background-color: #000;
+  z-index: 10;
 }
 
 iframe{
