--- a/src/server/sass/modules/_toolbar.scss
+++ b/src/server/sass/modules/_toolbar.scss
@@ -83,7 +83,6 @@
   position: absolute;
   opacity: 1;
   top: -16px;
-  z-index: 55;
   transition: all 200ms ease-in-out;
   transform-origin: 50% 50%;
   line-height: 29px;
@@ -102,11 +101,12 @@
   left: -14px;
   padding-left: 10px;
   padding-right: 7px;
-  z-index: 5555;
+  z-index: 12;
 }
 
 .close-engine{
-  right: -14px;  
+  right: -14px;
+  z-index: 11;  
 }
 
 body {
